[tool.poetry]
name = "pyoptbook"
version = "0.1.0"
description = "for pyoptbook"
authors = ["Shunsuke Ozeki <shunsuke.ozeki@timee.co.jp>"]

[tool.poetry.dependencies]
python = "3.9.6"
jupyter = "^1.0.0"
ipython = "^8.4.0"
notebook = "^6.4.12"
pandas = "^1.4.3"
PuLP = "^2.6.0"
joblib = "^1.1.0"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
numpy = "^1.23.2"
Flask = "^2.2.2"
lxml = "^4.9.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
